; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/edac/extr_mv64x60_edac.c_get_total_mem.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/edac/extr_mv64x60_edac.c_get_total_mem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mv64x60_mc_pdata = type { i32 }
%struct.device_node = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"memory\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"reg\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mv64x60_mc_pdata*)* @get_total_mem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_total_mem(%struct.mv64x60_mc_pdata* %0) #0 {
  %2 = alloca %struct.mv64x60_mc_pdata*, align 8
  %3 = alloca %struct.device_node*, align 8
  %4 = alloca i32*, align 8
  store %struct.mv64x60_mc_pdata* %0, %struct.mv64x60_mc_pdata** %2, align 8
  store %struct.device_node* null, %struct.device_node** %3, align 8
  %5 = call %struct.device_node* @of_find_node_by_type(i32* null, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  store %struct.device_node* %5, %struct.device_node** %3, align 8
  %6 = load %struct.device_node*, %struct.device_node** %3, align 8
  %7 = icmp ne %struct.device_node* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %17

9:                                                ; preds = %1
  %10 = load %struct.device_node*, %struct.device_node** %3, align 8
  %11 = call i32* @of_get_property(%struct.device_node* %10, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32* null)
  store i32* %11, i32** %4, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.mv64x60_mc_pdata*, %struct.mv64x60_mc_pdata** %2, align 8
  %16 = getelementptr inbounds %struct.mv64x60_mc_pdata, %struct.mv64x60_mc_pdata* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 4
  br label %17

17:                                               ; preds = %9, %8
  ret void
}

declare dso_local %struct.device_node* @of_find_node_by_type(i32*, i8*) #1

declare dso_local i32* @of_get_property(%struct.device_node*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
